--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@
 }
 
 .nav .title .logo .logoImg{
-	padding-top: 8px;
+	padding-top: 7px;
 	width: 34px;
 	height: 34px;
 }
@@ -84,8 +84,14 @@
 	vertical-align: middle;
 }
 
-.nav .title .list .right .letter div{
+.nav .title .list .letter img{
+	width: 26px;
+	height: 20px;
+}
+
+.nav .title .list .letter div{
 	position: absolute;
+	top: 18px;
 	width: 15px;
 	height: 15px;
 	border-radius: 50%;
@@ -94,8 +100,19 @@
 	color: #fff;
 	text-align: center;
 	font-size: 10px;
-	line-height: 16px;
+	line-height: 15px;
 }
+
+/* .nav .title .list .letterBox .login{
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background: #fff;
+} */
+
+
+
 
 
 
@@ -122,8 +139,6 @@
 	bottom: 0px;
 	padding-bottom: 8px;
 	margin-left: -50px;
-	/* background: #fff; */
-	/* z-index: 102; */
 	display: grid;
 	grid-template-columns: repeat(3,1fr);
 	grid-template-rows: 1fr;
