--- a/index.css
+++ b/index.css
@@ -10,6 +10,18 @@
 	margin: 0 auto;
 }
 
+@keyframes zoom{
+	from {
+		transform: scale(1);
+	}
+	to {
+		transform: scale(1.1);
+	}
+}
+
+
+
+
 
 /*顶端导航栏*/
 .nav{
@@ -100,7 +112,7 @@
 	color: #fff;
 	text-align: center;
 	font-size: 10px;
-	line-height: 15px;
+	/* line-height: 16px; */
 }
 
 /* .nav .title .list .letterBox .login{
@@ -121,6 +133,9 @@
 
 
 
+
+
+
 /*头部轮播图*/
 .head{
 	position: relative;
@@ -129,6 +144,8 @@
 	background-image: url("image/14.png");
 	background-repeat:no-repeat;
 	background-position:top;
+	background-size: cover;
+    -webkit-background-size: cover;
 }
 
 .head .dotBox{
@@ -161,6 +178,17 @@
 	cursor: pointer;
 }
 
+.mid{
+	height: 400px;
+	width: 100%;
+	/* border: 1px solid #888; */
+	background: #ccc;
+}
+
+
+
+
+
 
 
 
@@ -177,7 +205,7 @@
 }
 
 .content .box{
-	width: 1234px;
+	width: 1134px;
 	height: 1452px;
 	background: rgba(248,248,248);
 }
@@ -185,7 +213,8 @@
 .content .box .pad{
 	width: 1134px;
 	height: 1352px;
-	padding: 50px;
+	padding-top: 50px;
+	padding-bottom: 50px;
 	background: rgba(248,248,248);
 	display: grid;
 	grid-template-rows: repeat(4,1fr);
@@ -200,6 +229,13 @@
 	border: 1px solid #ddd;
 	border-radius: 10px; 
 	background: #fff;
+	animation: zooms 1s;
+}
+
+.content .box .pad .item:hover{
+	/* transform: scale(1.1); */
+	animation: zoom 0.5s;
+	animation-fill-mode: forwards;
 }
 
 .content .box .pad .item .headline{
@@ -229,6 +265,7 @@
 	padding-left: 15px;
 	color: #909090;
 	font-size: 14px;
+	text-align: justify;
 	/* font-family: "PingFangSC"; */
 }
 
