--- a/index.css
+++ b/index.css
@@ -240,11 +240,11 @@
 	border-radius: 10px; 
 	background: #fff;
 	transform: scale(1);
-	transition: transform 0.3s linear;
+	transition: transform 250ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 
 .content .box .pad .item:hover{
-	transform: scale(1.1);
+	transform: scale(1.06);
 }
 
 .content .box .pad .item .headline{
