--- a/index.css
+++ b/index.css
@@ -151,12 +151,65 @@
 	position: relative;
 	height: 700px;
 	width: 100%;
-	background-image: url("image/14.png");
+	/* background-image: url("image/14.png"); */
 	background-repeat:no-repeat;
 	background-position:top;
 	background-size: cover;
     -webkit-background-size: cover;
 }
+
+.head .swiper-wrapper .slideText{
+	position: absolute;
+	width: 800px;
+	height: 100px;
+	top: 50%;
+	left: 50%;
+	margin-top: -50px;
+	margin-left: -400px;
+	text-align: center;
+	/* line-height: 100px; */
+	display: inline-block;
+	color: #fff;
+}
+
+.head .swiper-wrapper h1{
+	font-size: 52px;
+	letter-spacing:1.62px;
+	font-weight: 300;
+	text-shadow:0 4px 42px #000000;
+}
+
+.head .swiper-wrapper h2{
+	font-size: 36px;
+	font-weight: 300;
+	padding-top: 77px; 
+}
+
+.head .swiper-wrapper .number{
+	font-size: 100px;
+	font-family:Charter-Roman;
+	color:#477de9;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.head .swiper-wrapper .unit{
+	display: inline-block;
+	height: 100px;
+	line-height: 100px;
+	font-size: 36px;
+	color: #fff;
+	font-family: "PingFangSC-Medium";
+	vertical-align: middle;
+	padding-left: 29px;
+}
+
+
+
+
+
+
+
 
 .head .dotBox{
 	position: absolute;
@@ -188,11 +241,71 @@
 	cursor: pointer;
 }
 
+
+
+
+
 .mid{
-	height: 400px;
+	position: relative;
+	height: 1273px;
 	width: 100%;
 	/* border: 1px solid #888; */
-	background: #ccc;
+	background: #fff;
+	padding-bottom: 60px;
+}
+
+.mid .midbox{
+	height: 1273px;
+	width: 1094px;
+	margin: 0 auto;
+	background: #fff;
+	display: grid;
+	grid-template-rows: 160px 1fr;
+	grid-template-columns: 1fr;
+}
+
+.mid .midbox p{
+	font-size: 36px;
+	color: #5a5a5a;
+	padding-top: 60px;
+	width: 354px;
+	height: 100px;
+}
+
+.mid .midbox .midcontent{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: repeat(3,1fr);
+}
+
+.mid .midbox .midcontent img{
+	width: 487px;
+	height: 331px;
+	padding: 20px 30px;
+}
+
+.mid .midbox .midcontent .midleft{
+	padding-left: 105px; 
+	background: #fff;
+}
+
+.mid .midbox .midcontent .midright{
+	padding-right: 105px;
+	background: #fff;
+}
+
+.mid .midbox .midcontent .midtext{
+	padding-top: 20px;
+	font-size: 20px;
+	color: #5a5a5a;
+	text-align: justify;
+}
+
+.mid .midbox .midcontent  h3{
+	padding-top: 100px;
+	font-size: 36px;
+	color: #5a5a5a;
+	text-align: center;
 }
 
 
@@ -209,9 +322,16 @@
 /*主体内容*/
 .content{
 	position: relative;
-	height: 1452px;
+	height: 1552px;
 	width: 100%;
 	background: rgba(248,248,248);
+}
+
+.content p{
+	padding-top: 80px;
+	font-size: 36px;
+	color: #5a5a5a;
+	text-align: center;
 }
 
 .content .box{
@@ -223,7 +343,7 @@
 .content .box .pad{
 	width: 1134px;
 	height: 1352px;
-	padding-top: 50px;
+	padding-top: 30px;
 	padding-bottom: 50px;
 	background: rgba(248,248,248);
 	display: grid;
@@ -240,11 +360,11 @@
 	border-radius: 10px; 
 	background: #fff;
 	transform: scale(1);
-	transition: transform 0.3s linear;
+	transition: transform 0.15s linear;
 }
 
 .content .box .pad .item:hover{
-	transform: scale(1.1);
+	transform: scale(1.05);
 }
 
 .content .box .pad .item .headline{
@@ -261,17 +381,13 @@
 	height: 70px;
 }
 
-.content .box .pad .item .logoBox img{
-	/*width: 70px;
-	height: 70px;*/
-}
 
 
 
 .content .box .pad .item .text{
 	height: 60px;
-	padding-right: 15px;
-	padding-left: 15px;
+	padding-right: 26px;
+	padding-left: 26px;
 	color: #909090;
 	font-size: 14px;
 	text-align: justify;
@@ -289,7 +405,7 @@
 	width: 49%;
 	text-align: center;
 	font-size: 20px; 
-	padding-top: 16px;
+	padding-top: 26px;
 }
 
 .content .box .pad .item .btn .btnBox a{
@@ -325,6 +441,7 @@
 
 .footer .present .footerText{
 	font-size: 13px;
+	line-height: 24px;
 }
 
 .footer .present .msg{
@@ -333,7 +450,7 @@
 }
 
 .footer .present .copyright{
-	padding-top: 40px;
+	padding-top: 46px;
 	text-align: center;
 	font-size: 14px;
 }
