--- a/index.css
+++ b/index.css
@@ -119,12 +119,10 @@
 
 .head .swiper-wrapper .slideText{
 	position: absolute;
-	width: 800px;
+	width: 100%;
 	height: 100px;
 	top: 50%;
-	left: 50%;
-	margin-top: -50px;
-	margin-left: -400px;
+	margin-top: -100px;
 	text-align: center;
 	display: inline-block;
 	color: #fff;
@@ -140,7 +138,11 @@
 .head .swiper-wrapper h2{
 	font-size: 36px;
 	font-weight: 300;
-	padding-top: 77px; 
+	padding-top: 47px; 
+}
+
+.head .swiper-wrapper .slideText div{
+	padding-top: 30px;
 }
 
 .head .swiper-wrapper .number{
@@ -149,6 +151,10 @@
 	color:#477de9;
 	text-align: center;
 	vertical-align: middle;
+}
+
+.head .swiper-wrapper .slideText .roll{
+	padding-top: 0px;
 }
 
 .head .swiper-wrapper .unit{
