--- a/index.css
+++ b/index.css
@@ -153,6 +153,16 @@
 	vertical-align: middle;
 }
 
+.head .swiper-wrapper .numberUnit{
+	display: inline-block;
+	font-size: 100px;
+	font-family:Charter-Roman;
+	color:#477de9;
+	text-align: center;
+	vertical-align: middle;
+	padding-top: 0px!important;
+}
+
 .head .swiper-wrapper .slideText .roll{
 	padding-top: 0px;
 }
